--- a/package.json
+++ b/package.json
@@ -22,21 +22,23 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@stripe/stripe-js": "^4.9.0",
+    "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
+    "openai": "^4.71.1",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.2",
     "recharts": "^2.15.0",
-    "stripe": "^17.3.1",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
